@@ -2,6 +2,8 @@ gphoto2 2.3.1.2.trunk
 
  * Ditched autogen.sh, use standard autoreconf from stock autoconf.
  * Put auto* files into auto-aux/ and auto-m4/.
+ * New --storage-info function to get direct storage information
+   from the camera via API.
 
 gphoto2 2.3.1
 
